# BTH_SampleGame

./: .gitignore  .gitmodules  SampleGame.sln
SampleGame/: Camera.cpp  Cube.cpp  Cube.h  Quad.cpp  ReadMe.txt  Renderer.cpp  Renderer.h  SampleGame.cpp  SampleGame.vcxproj  SampleGame.vcxproj.filters  Shader.cpp  Shader.h  WorldObject.cpp  WorldObject.h  stdafx.cpp  stdafx.h
SampleGame/Debug/: vc120.idb
SampleGame/Debug/SampleGame.tlog/: CL.read.1.tlog  CL.write.1.tlog  SampleGame.lastbuildstate  cl.command.1.tlog
SampleGame/x64/Debug/: vc120.idb
SampleGame/x64/Debug/SampleGame.tlog/: CL.read.1.tlog  CL.write.1.tlog  SampleGame.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SampleGame/x64/Release/SampleGame.tlog/: SampleGame.lastbuildstate
assets/: assets.paca  hej.txt
build-scripts/: CMakeLists.txt  generate_vs14_solution.bat  generate_vs14_x86_solution.bat
ipch/samplegame-7c12dd04/: samplegame-27faa0e8.ipch  samplegame-c7ee9f60.ipch
shaders/: fragmentShader.glsl  vertexShader.glsl
source/: AssetObject.cpp  AssetObject.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  ObjParser.cpp  ObjParser.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  SampleGame.cpp  Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h  WorldObject.cpp  WorldObject.h
x64/Debug/: SampleGame.ilk
